--- a/app/templates/escape/play.html
+++ b/app/templates/escape/play.html
@@ -291,6 +291,7 @@
       <div class="row">
         <button id="muteBtn" class="btn" style="background:#263a5f;color:#cfe2ff">🔇 Sound</button>
         <a href="/escape/leaderboard" class="btn" style="background:#1cf29f;">Leaderboard</a>
+        <a href="/" class="btn" style="background:#cfe2ff;">Back to Homepage</a>
       </div>
     </header>
 
