--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -195,6 +195,8 @@ next.{% endblock %}
         <div class="cta-row">
             <a href="#feature" class="cta-primary">See Today’s Briefing</a>
             <a href="/escape/play" class="main-btn">Play Daily Escape</a>
+            <a href="/roulette" class="main-btn">Play Timeline Roulette</a>
+
         </div>
     </section>
 </div>
